<resources>
    <string name="app_name" translatable="false">Moodl</string>
    <string name="debug" translatable="false">Moodl_debug</string>
    <string name="debug_volley" translatable="false">Moodl_debugVolley</string>
    <string name="title_activity_settings">Settings</string>
    <string name="currency" translatable="false">currency</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_hide_balance">Hide balance</string>
    <string name="pref_title_category_display">Display</string>
    <string name="pref_title_category_data_backup">Data backup</string>
    <string name="pref_title_category_synchronization">Synchronization</string>
    <string name="pref_title_category_other">Other</string>
    <string name="pref_title_minimum_amount_displayed">Minimum amount displayed</string>
    <string name="pref_title_version">Version</string>
    <string name="ivKey" translatable="false">0123456789MoodlH</string>
    <string name="pref_title_export">Export manual entries</string>
    <string name="pref_title_import">Import manual entries</string>
    <string name="pref_title_default_currency">Default currency</string>
    <string-array name="pref_default_currencies_titles">
        <item>Dollar (USD)</item>
        <item>Euro (EUR)</item>
        <item>Pound (GBP)</item>
        <item>Yen (JPY)</item>
        
    </string-array>
    <string-array name="pref_default_currencies_values">
        <item>USD</item>
        <item>EUR</item>
        <item>GBP</item>
        <item>JPY</item>
        
    </string-array>
    <string name="buyText">Buy</string>
    <string name="sellText">Sell</string>
    <string name="transferText">Transfer</string>
    <string name="transaction_record">Save</string>
    <string name="day_history">Day history</string>
    <string name="line_chart">Line chart</string>
    <string name="candle_stick_chart">Candle stick chart</string>
    <string name="backline" translatable="false">\n</string>
    <string name="beginning_price">Beginning price</string>
    <string name="current_price">Current price</string>
    <string name="delta">Delta</string>
    <string name="total_volume">Total volume</string>
    <string name="highest_price">Highest price</string>
    <string name="lowest_price">Lowest price</string>
    <string name="total_supply">Total supply</string>
    <string name="circulating_supply">Circulating supply</string>
    <string name="market_capitalization">Market capitalization</string>
    <string name="rank">Rank</string>
    <string name="algorithm">Algorithm</string>
    <string name="proof_type">Proof type</string>
    <string name="start_date">Start date</string>
    <string name="description">Description</string>
    <string name="transaction_history">Transaction history</string>
    <string name="trade_history">Trade history</string>
    <string name="trade_loading">Looking for trades&#8230;</string>
    <string name="default_value" translatable="false">--</string>
    <string name="drawer">Drawer</string>
    <string name="dominance_percentage">Dominance percentage</string>
    <string name="active_cryptocurrencies">Active cryptocurrencies</string>
    <string name="volume_24h">24h volume</string>
    <string name="active_marketes">Active markets</string>
    <string name="add_transaction">Add transaction</string>
    <string name="add_watchlist">Add to watchlist</string>
    <string name="edit_mode">Edit mode</string>
    <string name="loading_coin_list" translatable="false">Hodl&#8230;</string>
    <string name="pref_header_exchange">Exchanges settings</string>
    <string name="pref_header_wallet">Wallets settings</string>
    <string name="pref_fingerprint" translatable="false">Touch ID</string>
    <string name="pref_title_enable_synchronization_hitbtc">Enable synchronization</string>
    <string name="pref_title_hitbtc_publickey">Public key</string>
    <string name="pref_title_hitbtc_privatekey">Private key</string>
    <string name="pref_title_exchange_hitbtc" translatable="false">HitBTC</string>
    <string name="pref_title_enable_synchronization_gdax">Enable synchronization</string>
    <string name="pref_title_gdax_publickey">Public key</string>
    <string name="pref_title_gdax_privatekey">Private key</string>
    <string name="pref_title_exchange_gdax" translatable="false">GDAX</string>
    <string name="pref_title_enable_synchronization_binance">Enable synchronization</string>
    <string name="pref_title_binance_publickey">Public key</string>
    <string name="pref_title_binance_privatekey">Private key</string>
    <string name="pref_title_exchange_binance" translatable="false">Binance</string>
    <string name="pref_title_enable_synchronization_poloniex">Enable synchronization</string>
    <string name="pref_title_poloniex_publickey">Public key</string>
    <string name="pref_title_poloniex_privatekey">Private key</string>
    <string name="pref_title_exchange_poloniex" translatable="false">Poloniex</string>
    <string name="pref_title_enable_synchronization_kraken">Enable synchronization</string>
    <string name="pref_title_kraken_publickey">Public key</string>
    <string name="pref_title_kraken_privatekey">Private key</string>
    <string name="pref_title_exchange_kraken" translatable="false">Kraken</string>
    <string name="activity_amount">Amount</string>
    <string name="activity_purchase_price">Purchase price</string>
    <string name="activity_purchase_date">Purchase date</string>
    <string name="activity_fees">Fees</string>
    <string name="title_activity_currency_details" translatable="false">CurrencyDetailsActivity</string>
    <string name="title_history">History charts</string>
    <string name="title_watchlist">Watchlist</string>
    <string name="title_infos">Infos</string>
    <string name="title_transactions">Transactions</string>
    <string name="title_home">Holdings</string>
    <string name="title_market_cap">Market Capitalization</string>
    <string name="title_coin_list">Coin list</string>
    <string-array name="time_interval_string_array">
        <item>1 hour</item>
        <item>3 hours</item>
        <item>1 day</item>
        <item>3 days</item>
        <item>1 week</item>
        <item>1 month</item>
        <item>3 months</item>
        <item>6 months</item>
        <item>1 year</item>
    </string-array>
    <string-array name="wipe_options_string_array">
        <item>Manual entries</item>
        <item>Watchlist</item>
        <item>API keys</item>
    </string-array>
    <string-array name="from_transfer_options_string_array">
        <item>Exchange</item>
        <item>My wallet</item>
        <item>Mining</item>
        <item>Someone else\'s wallet</item>
        <item>Airdrop</item>
        <item>Other / Unknown</item>
        <item>Fork</item>
    </string-array>
    <string-array name="to_transfer_options_string_array">
        <item>Exchange</item>
        <item>My wallet</item>
        <item>Someone else\'s wallet</item>
        <item>Other / Unknown</item>
    </string-array>
    <string-array name="fees_options">
        <item>Percentage</item>
        <item>Fixed</item>
    </string-array>
    <string name="currencySymbolPlaceholder" translatable="false">(%1$s)</string>
    <string name="currencyBalancePlaceholder" translatable="false">%1$s%2$s</string>
    <string name="currencyPercentagePlaceholder" translatable="false">%1$s%%</string>
    <string name="currencyDollarParenthesisPlaceholder" translatable="false">(US$%1$s)</string>
    <string name="currencyDollarPlaceholder" translatable="false">US$%1$s</string>
    <string name="fluctuationDollarPercentagePlaceholder" translatable="false">US$%1$s (%2$s%%)</string>
    <string name="currencyEurosParenthesisPlaceholder" translatable="false">(%1$s€)</string>
    <string name="currencyEurosPlaceholder" translatable="false">%1$s€</string>
    <string name="fluctuationEurosPercentagePlaceholder" translatable="false">%1$s€ (%2$s%%)</string>
    <string name="currencyPoundParenthesisPlaceholder" translatable="false">(%1$s£)</string>
    <string name="currencyPoundPlaceholder" translatable="false">%1$s£</string>
    <string name="fluctuationPoundPercentagePlaceholder" translatable="false">%1$s£ (%2$s%%)</string>
    <string name="currencyYenParenthesisPlaceholder" translatable="false">(%1$s¥)</string>
    <string name="currencyYenPlaceholder" translatable="false">%1$s¥</string>
    <string name="fluctuationYenPercentagePlaceholder" translatable="false">%1$s¥ (%2$s%%)</string>
    <string name="denomincationPlaceholder" translatable="false">%1$s (%2$s)</string>
    <string name="pairPlaceholder" translatable="false">%1$s/%2$s</string>
    <string name="timestampPlaceholder">Date\n%1$s</string>
    <string name="emitedPlaceholder">Percentage of coin emitted : %1$s%%</string>
    <string name="volumeDollarPlaceholder">Volume\nUS$%1$s</string>
    <string name="priceDollarPlaceholder">Price\nUS$%1$s</string>
    <string name="volumeEurosPlaceholder">Volume\n%1$s€</string>
    <string name="priceEurosPlaceholder">Price\n%1$s€</string>
    <string name="volumePoundPlaceholder">Volume\n%1$s£</string>
    <string name="pricePoundPlaceholder">Price\n%1$s£</string>
    <string name="volumeYenPlaceholder">Volume\n%1$s¥</string>
    <string name="priceYenPlaceholder">Price\n%1$s¥</string>
    <string name="fingerprint_dialog_cancel">Cancel</string>
    <string name="fingerprint_dialog_title">Verify your fingerprint to continue</string>
    <string name="edit_transaction">Edit %1$s transaction</string>
    <string name="new_transaction">New transaction</string>
    <string name="action_settings">Settings</string>
    <string name="action_edit_mode">Edition</string>
    <string name="field_empty">This field cannot be blank</string>
    <string name="field_nan">This field must be a number</string>
    <string name="field_negative">This field must be positive</string>
    <string name="wipe_data">Wipe current data</string>
    <string name="restore_manual_entries">Restore manual entries</string>
    <string name="restore_keys">Restore API keys</string>
    <string name="enter_password">Enter password</string>
    <string name="password">Password</string>
    <string name="title_activity_exchange_settings">Settings</string>
    <string name="restoreBackup">Restore backup</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="infinity">Infinity</string>
    <string name="others">Others</string>
    <string name="market_dominance">Market Cap Dominance</string>
    <string name="global">Global</string>
    <string name="other_coins">Other coins</string>
    <string name="error_update_data">Error while updating data</string>
    <string name="update">Update</string>
    <string name="invalid_keys_hitbtc">HitBTC synchronization error : Invalid keys</string>
    <string name="invalid_keys_binance">Binance synchronization error : Invalid keys</string>
    <string name="cannot_resole_host">Can\'t resolve host</string>
    <string name="backup_manual_entries">Backup manual entries</string>
    <string name="backup_watchlist">Backup watchlist</string>
    <string name="backup_keys">Backup API keys</string>
    <string name="restore_watchlist">Restore watchlist</string>
    <string name="wipe_manual_entries">Wipe current entries</string>
    <string name="wipe_watchlist">Wipe current watchlist</string>
    <string name="wipe_api_keys">Wipe current API keys</string>
    <string name="account_label">Account label</string>
    <string name="apiKey">API Key</string>
    <string name="secretKey">Secret Key</string>
    <string name="informations">Informations</string>
    <string name="total_value">Total value</string>
    <string name="notes">Notes</string>
    <string name="activity_sell_price">Sell price</string>
    <string name="activity_sell_date">Sell date</string>
</resources>