<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/navigation_holdings"
            android:icon="@drawable/ic_account_balance_wallet_black_24dp"
            android:title="@string/title_home" />

        <item
            android:id="@+id/navigation_watchlist"
            android:icon="@drawable/ic_remove_red_eye_black_24dp"
            android:title="@string/title_watchlist" />

        <item
            android:id="@+id/navigation_market_cap"
            android:icon="@drawable/ic_pie_chart_black_24dp"
            android:title="@string/title_market_cap" />

        <item
            android:id="@+id/navigation_overview"
            android:icon="@drawable/ic_view_list_black_24dp"
            android:title="@string/title_coin_list"/>

    </group>

    <item android:title="">
        <menu>
            <group android:checkableBehavior="single">

                <item
                    android:id="@+id/navigation_settings"
                    android:icon="@drawable/ic_settings_black_24dp"
                    app:actionViewClass="android.widget.TextView"
                    android:title="@string/title_activity_settings" />

            </group>
        </menu>
    </item>
</menu>
