<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/InputActivityTheme"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="@dimen/margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/informations"
            android:textSize="@dimen/cardViewTitle"
            android:layout_marginBottom="10dp"
            android:textColor="@color/mainTextViewColor"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/separationLineSize"
            android:layout_gravity="center_vertical"
            android:background="@color/separationColor" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_account_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/account_label_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/account_label"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/account_description_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_publicKey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/publicKey_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/apiKey"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_secretKey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/secretKey_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/secretKey"/>

        </android.support.design.widget.TextInputLayout>


    </LinearLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/saveExchangeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/save"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        style="@style/Widget.AppCompat.Button.Colored"/>

</RelativeLayout>