<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/record_transaction_layout_background_sell">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_amount_sell"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/amount_editText_sell"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:hint="@string/activity_amount"/>

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_sellPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.5">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/sellPrice_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:hint="@string/activity_sell_price"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_sellDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/sellDate_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/activity_sell_date"
                    android:focusable="false"/>

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_totalValue_sell"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/totalValue_editText_sell"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:hint="@string/total_value"/>

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_fees_sell"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.7">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/fees_editText_sell"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:hint="@string/activity_fees"/>

            </android.support.design.widget.TextInputLayout>

            <Spinner
                android:id="@+id/feesCurrency_editText_sell"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_note_sell"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/note_editText_sell"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/notes"
                android:maxLines="4"
                android:lines="4"
                android:gravity="top"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/saveSellButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/save"
            android:layout_marginBottom="@dimen/mdtp_minimum_margin_top_bottom"
            android:layout_gravity="end"
            style="@style/Widget.AppCompat.Button.Colored"/>

    </LinearLayout>

</ScrollView>